# MrsWatson

./: .gitmodules  BUILDING.md  CMakeLists.txt  COMPATIBILITY.md  README.md  VST3_SDK_SETUP.md
cmake/: BuildPackage.cmake  ConfigureTarget.cmake
main/: CMakeLists.txt
source/: CMakeLists.txt  MrsWatsonOptions.c
source/app/: BuildInfo.c
source/audio/: SampleBuffer.h
source/base/: CharString.h  LinkedList.h  PlatformInfoMac.m
source/logging/: EventLogger.h
source/plugin/: Plugin.c  Plugin.h  PluginPreset.c  PluginVst2xMac.mm  PluginVst3.cpp  PluginVst3.h  PluginVst3Mac.mm
test/: CMakeLists.txt
test/demo/: README.md
